--- a/_posts/2024-04-28-27.移除元素.md
+++ b/_posts/2024-04-28-27.移除元素.md
@@ -75,9 +75,11 @@ for (int i = 0; i < len; i++) {
 
 ```swift
 func removeElement(_ nums: inout [Int], _ val: Int) -> Int {
-    var j = 0 //定义一个变量j，来代表最终数组的长度。
-    for i in 0..<nums.count { //使用for-in循环遍历整个数组。
-				//如果 nums[i] 不等于指定的元素val，就把 nums[i] 的值赋给 nums[j]，然后递增 j。
+    //定义一个变量j，来代表最终数组的长度。
+    var j = 0 
+    //使用for-in循环遍历整个数组。
+    for i in 0..<nums.count { 
+         //如果 nums[i] 不等于指定的元素val，就把 nums[i] 的值赋给 nums[j]，然后递增 j。
         if nums[i] != val { 
             nums[j] = nums[i]
             j += 1
