--- a/_posts/2024-04-28-88.合并两个有序数组.md
+++ b/_posts/2024-04-28-88.合并两个有序数组.md
@@ -59,22 +59,18 @@ category:
 
 这是一道常见的双指针问题，我们可以使用两个指针分别指向两个有序数组的末尾，然后不断比较两个指针所指向的数大小，并将其中较大的数插入到一个新的数组中。
 
-因为本题要求我们将结果保存在第一个数组 `nums1` 中，所以不能使用额外的空间。
+1. **初始化指针**：设置三个指针 `i`、`j` 和 `k`，其中 `i` 指向 `nums1` 数组的最后一个元素，`j` 指向 `nums2` 数组的最后一个元素，`k` 指向 `nums1` 数组末尾的空位（即 `m + n - 1`，因为 `nums1` 的前 `m` 个元素已经存在，需要在它们后面插入 `nums2` 的元素）。
 
-但是由于 `nums1` 数组后面有很多空位，因此可以从后往前遍历两个数组，利用 `nums1` 的后面的空位来存放最终的结果。
+2. **合并过程**：使用 `while` 循环，只要 `i` 和 `j` 都大于等于0（即两个数组都还有元素未比较），就进行以下操作：
+   - 比较 `nums1[i]` 和 `nums2[j]` 的大小。
+   - 如果 `nums1[i]` 大于 `nums2[j]`，则将 `nums1[i]` 移动到 `nums1[k]` 的位置，并将 `i` 和 `k` 都向前移动一位。
+   - 如果 `nums1[i]` 小于或等于 `nums2[j]`，则将 `nums2[j]` 移动到 `nums1[k]` 的位置，并将 `j` 和 `k` 都向前移动一位。
 
-具体地，我们可以定义三个指针 `i`、`j` 和 `k`，分别指向 `nums1`、`nums2` 和 `nums1` 需要插入元素的下标。
+3. **处理剩余元素**：当 `nums2` 数组的所有元素都被比较过后，如果 `nums1` 数组还有剩余的元素未比较（即 `i < 0`），则 `nums2` 中剩余的元素直接插入到 `nums1` 的前面。这部分通过另一个 `while` 循环完成，循环条件是 `j >= 0`，循环体是将 `nums2[j]` 插入到 `nums1[k]`，同时 `j` 和 `k` 向前移动一位。
 
-1. 初始化指针 `i` 指向 `nums1` 的最后一个有值的数，即 `m - 1`；
-    1. 指针 `j` 指向 `nums2` 的最后一个有值的数，即 `n - 1`；
-    2. 指针 `k` 指向 `nums1` 数组需要插入元素的下标，即 `m + n - 1`。
-    3. 指针 `i` 和 `j` 的初始值都是最后一个有值的数，而指针 `k` 的初始值是最后一个空位的下标。
-2. 不断比较 `nums1` 和 `nums2` 当前指向的数，将其中较大的数插入到 `nums1` 数组的末尾，并将指针向前移动一位。
-    1. 使用一个 `while` 循环，在循环体内部比较 `nums1[i]` 和 `nums2[j]` 的大小，
-    2. 如果 `nums1[i]` 大于 `nums2[j]`，则将 `nums1[i]` 插入到 `nums1` 数组的末尾（即 `nums1[k] = nums1[i]`），并将指针 `i` 向前移动一位（即 `i -= 1`）。
-    3. 否则，将 `nums2[j]` 插入到 `nums1` 数组的末尾（即 `nums1[k] = nums2[j]`），并将指针 `j` 向前移动一位（即 `j -= 1`）。
-    4. 在每次插入元素之后，指针 `k` 也需要向前移动一位（即 `k -= 1`）。
-3. 如果 `nums2` 数组还有剩余的元素没有被插入到 `nums1` 中，则将其全部插入到 `nums1` 的前面。这是因为如果 `nums1` 数组先遍历完，而 `nums2` 数组还有剩余元素未插入到 `nums1` 中，那么这些元素肯定是小于 `nums1` 数组中已经遍历过的所有数的，因此可以直接插入到 `nums1` 数组的前面。
+4. **结束函数**：由于 `nums1` 是 `inout` 参数，所以对它的修改会直接反映到原数组上，不需要额外的返回值。函数没有显式返回语句，因为在 Swift 中，最后一行表达式的值会被用作函数的返回值，但在这个函数中，没有需要返回的值。
+
+这个函数的时间复杂度是 O(n)，其中 n 是 `nums2` 的长度，因为每个元素最多被比较一次。空间复杂度是 O(1)，因为除了输入数组外，没有使用额外的存储空间。
 
 代码实现：
 
@@ -103,22 +99,3 @@ func merge(_ nums1: inout [Int], _ m: Int, _ nums2: [Int], _ n: Int) {
     }
 }
 ```
-
-代码解释：
-
-首先，定义了一个名为 `merge` 的函数，该函数接受四个参数：
-
-- `nums1`：有序整数数组1，是一个 inout 参数，即可以被修改。
-- `m`：表示 `nums1` 数组中前 `m` 个元素有值，后面的部分为空位，需要插入新的元素。
-- `nums2`：有序整数数组2。
-- `n`：表示 `nums2` 数组中的所有 `n` 个元素都有值。
-
-然后，在函数体内部，先初始化三个指针：
-
-- `i`：指向 `nums1` 数组中最后一个有值的数的下标，即初始值为 `m - 1`。
-- `j`：指向 `nums2` 数组中最后一个有值的数的下标，即初始值为 `n - 1`。
-- `k`：指向 `nums1` 数组中最后一个空位的下标，即初始值为 `m + n - 1`。
-
-接下来，使用 `while` 循环不断比较 `nums1` 和 `nums2` 当前指向的数，并将其中较大的数插入到 `nums1` 数组的末尾。
-
-最后，如果 `nums2` 数组还有剩余的元素没有被插入到 `nums1` 中，则将其全部插入到 `nums1` 的前面。这是因为如果 `nums1` 数组先遍历完，而 `nums2` 数组还有剩余元素未插入到 `nums1` 中，那么这些元素肯定是小于 `nums1` 数组中已经遍历过的所有数的，因此可以直接插入到 `nums1` 数组的前面。
